--- a/Void/Assets/UXML/FixtureRelationshipsEditor.uxml
+++ b/Void/Assets/UXML/FixtureRelationshipsEditor.uxml
@@ -4,17 +4,18 @@
         <ui:Button text="Back to Fixtures" parse-escape-sequences="true" display-tooltip-when-elided="true" name="BackToFixturesButton" class="button" />
         <ui:VisualElement name="RelationshipDataContainer" style="flex-grow: 1;">
             <ui:ProgressBar value="100" title="Create New Relationship" name="RelationshipProgressBar" high-value="100" />
-            <ui:VisualElement style="flex-grow: 1; flex-wrap: nowrap; flex-direction: row; justify-content: flex-start; align-items: auto; align-self: auto;">
-                <ui:Button text="Previous Relationship" parse-escape-sequences="true" display-tooltip-when-elided="true" name="PreviousRelationshipButton" class="button" style="flex-basis: auto; width: auto; margin-top: 5px; margin-right: 5px; margin-bottom: 5px; margin-left: 5px; flex-grow: 1;" />
-                <ui:Button text="Next Relationship" parse-escape-sequences="true" display-tooltip-when-elided="true" name="NextRelationshipButton" class="button" style="width: auto; align-items: stretch; flex-basis: auto; margin-top: 5px; margin-right: 5px; margin-bottom: 5px; margin-left: 5px; flex-grow: 1; flex-shrink: 0;" />
-            </ui:VisualElement>
             <ui:VisualElement style="flex-grow: 1; flex-direction: row; align-items: auto;">
                 <ui:Button text="Remove Relationship" parse-escape-sequences="true" display-tooltip-when-elided="true" name="RemoveRelationshipButton" class="button" style="flex-grow: 1;" />
                 <ui:Button text="New Relationship" parse-escape-sequences="true" display-tooltip-when-elided="true" name="NewRelationshipButton" class="button" style="flex-grow: 1;" />
             </ui:VisualElement>
-            <ui:FloatField label="Weight" value="0" name="WeightField" />
-            <ui:Vector2IntField label="Position" name="PositionField" />
-            <ui:Vector2IntField label="Forward" name="ForwardField" />
+            <ui:VisualElement style="flex-grow: 1; flex-wrap: nowrap; flex-direction: row; justify-content: flex-start; align-items: auto; align-self: auto;">
+                <ui:Button text="Previous Relationship" parse-escape-sequences="true" display-tooltip-when-elided="true" name="PreviousRelationshipButton" class="button" style="flex-basis: auto; width: auto; margin-top: 5px; margin-right: 5px; margin-bottom: 5px; margin-left: 5px; flex-grow: 1;" />
+                <ui:Button text="Next Relationship" parse-escape-sequences="true" display-tooltip-when-elided="true" name="NextRelationshipButton" class="button" style="width: auto; align-items: stretch; flex-basis: auto; margin-top: 5px; margin-right: 5px; margin-bottom: 5px; margin-left: 5px; flex-grow: 1; flex-shrink: 0;" />
+            </ui:VisualElement>
+            <ui:FloatField label="Weight" value="0" name="WeightField" class="field" />
+            <ui:Vector2IntField label="Position" name="PositionField" class="field" />
+            <ui:EnumField label="Rotation Preset" type="UnityEngine.TextAlignment, UnityEngine.TextRenderingModule" value="Center" name="RotationPresetField" class="field" />
+            <ui:Vector2IntField label="Forward" name="ForwardField" class="field" />
             <ui:ScrollView name="RelationshipVisualizationScrollView" />
         </ui:VisualElement>
     </ui:VisualElement>
